--- a/main.html
+++ b/main.html
@@ -1,17 +1,123 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Quiz with Progress Save</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      padding: 20px;
+    }
+    div#questions > div {
+      margin-bottom: 15px;
+    }
+    input[type="radio"] {
+      margin-right: 5px;
+    }
+    #submit, #reset {
+      padding: 8px 12px;
+      margin-top: 10px;
+      margin-right: 10px;
+      cursor: pointer;
+    }
+    #score {
+      margin-top: 15px;
+      font-weight: bold;
+    }
+  </style>
+</head>
+<body>
 
-<html>
-  <head>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
+  <h1>Quiz</h1>
+  <div id="questions"></div>
+  <button id="submit">Submit</button>
+  <button id="reset">Reset Quiz</button>
+  <div id="score"></div>
 
-  <body>
-    <!-- do not change this code -->
-    <h1>Quiz</h1>
-    <div id="questions"></div>
-    <button id="submit">Submit</button>
-    <div id="score"></div>
+  <script>
+    // DOM elements
+    const questionsElement = document.getElementById("questions");
+    const submitBtn = document.getElementById("submit");
+    const resetBtn = document.getElementById("reset");
+    const scoreElement = document.getElementById("score");
 
-    <script type="text/javascript" src="./script.js"></script>
-  </body>
+    // Questions data
+    const questions = [
+      { question: "What is the capital of France?", choices: ["Paris", "London", "Berlin", "Madrid"], answer: "Paris" },
+      { question: "What is the highest mountain in the world?", choices: ["Everest", "Kilimanjaro", "Denali", "Matterhorn"], answer: "Everest" },
+      { question: "What is the largest country by area?", choices: ["Russia", "China", "Canada", "United States"], answer: "Russia" },
+      { question: "Which is the largest planet in our solar system?", choices: ["Earth", "Jupiter", "Mars"], answer: "Jupiter" },
+      { question: "What is the capital of Canada?", choices: ["Toronto", "Montreal", "Vancouver", "Ottawa"], answer: "Ottawa" },
+    ];
+
+    // Load user progress from sessionStorage or initialize
+    let userAnswers = JSON.parse(sessionStorage.getItem("progress")) || {};
+
+    // Render questions
+    function renderQuestions() {
+      questionsElement.innerHTML = ""; // clear before rendering
+      questions.forEach((q, i) => {
+        const questionDiv = document.createElement("div");
+        const questionText = document.createElement("p");
+        questionText.textContent = q.question;
+        questionDiv.appendChild(questionText);
+
+        q.choices.forEach((choice) => {
+          const label = document.createElement("label");
+          const radio = document.createElement("input");
+          radio.type = "radio";
+          radio.name = `question-${i}`;
+          radio.value = choice;
+          if (userAnswers[i] === choice) radio.checked = true;
+
+          // Update sessionStorage on selection
+          radio.addEventListener("change", () => {
+            userAnswers[i] = choice;
+            sessionStorage.setItem("progress", JSON.stringify(userAnswers));
+          });
+
+          label.appendChild(radio);
+          label.appendChild(document.createTextNode(choice));
+          questionDiv.appendChild(label);
+          questionDiv.appendChild(document.createElement("br"));
+        });
+
+        questionsElement.appendChild(questionDiv);
+      });
+    }
+
+    // Calculate and show score
+    function calculateScore() {
+      let score = 0;
+      questions.forEach((q, i) => {
+        if (userAnswers[i] === q.answer) score++;
+      });
+      scoreElement.textContent = `Your score is ${score} out of ${questions.length}.`;
+      localStorage.setItem("score", score);
+    }
+
+    // Reset quiz (clear session and local storage)
+    function resetQuiz() {
+      userAnswers = {};
+      sessionStorage.removeItem("progress");
+      localStorage.removeItem("score");
+      scoreElement.textContent = "";
+      renderQuestions();
+    }
+
+    // Display previous score if available
+    window.addEventListener("load", () => {
+      renderQuestions();
+      const savedScore = localStorage.getItem("score");
+      if (savedScore !== null) {
+        scoreElement.textContent = `Your score is ${savedScore} out of ${questions.length}.`;
+      }
+    });
+
+    // Event listeners
+    submitBtn.addEventListener("click", calculateScore);
+    resetBtn.addEventListener("click", resetQuiz);
+  </script>
+
+</body>
 </html>
